JDK-6814467 : G1: small fixes related to concurrent marking verboseness
  • Type: Bug
  • Component: hotspot
  • Sub-Component: gc
  • Affected Version: hs15
  • Priority: P4
  • Status: Resolved
  • Resolution: Fixed
  • OS: generic
  • CPU: generic
  • Submitted: 2009-03-06
  • Updated: 2013-09-18
  • Resolved: 2009-03-18
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 6 JDK 7 Other
6u14Fixed 7Fixed hs14Fixed
Related Reports
Relates :  
Description
This CR covers three very small fixes all of which cause some strangeness to the verbose GC output:

a) there's one occurence in concurrentMarkThread.cpp where tty is used, instead of gclog_or_tty, when printing verbose GC output

b) doConcurrentMark() was, for some reason, incorrectly called from checkConcurrentMark (this was causing the marking phase to be incorrectly woken up after a Full GC; no marking actually happened, but marking related verbose GC information was printed which was confusing)

c) some fields of ConcurrentMark (_has_aborted, _restart_for_overflow, _concurrent_marking_in_progress, and _should_gray_objects) were not initialised. In some cases, and in conjuction with b), this was causing the marking thread to output "[GC ocnurrent-mark-restart-for-overflow]" several times a second and was bloating the GC log (which would rapidly reach the 2GB limit).

Comments
EVALUATION http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/7ea5ca260b28
08-03-2009

EVALUATION See Description.
06-03-2009