6814467: G1: small fixes related to concurrent marking verboseness

A few small fixes to remove some inconsistencies in the concurrent mark-related verbose GC output.

Reviewed-by: jmasa